--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
             background-color: #f2f2f2;}
 
         h1 {
-            background-color: #a0ff1c;
+            background-color: #d25223;
             color: rgb(2, 0, 0);
             padding: 10px;
         }
 
         .box {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             width: 60%;
             margin: 20px auto;
             padding: 15px;
-            border: 1px solid rgb(184, 37, 37);
+            border: 1px solid rgb(255, 255, 255);
         }
         ul {
+            font-size: x-large;
+            color: purple;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             list-style-type: square;
+            text-align: left;
         }
 
     </style>
@@ -33,9 +37,9 @@
 
     <div class="box">
         <h2>Course Video</h2>
-        <iframe width="200" height="200"
+        <iframe width="500" height="300"
             src="https://www.youtube.com/embed/UB1O30fR-EE"
-            >
+            allowfullscreen>
         </iframe>
     </div>
 
